# cmake-boilerplate-generator

./: .gitignore  README.md  pyscaffold.py
generators/: cmakelists_gen.py  maincpp_gen.py  project_gen.py
templates/: CMakeLists.txt  main.cpp
utilities/: cmakelists_gen.py
utilities/constants/: FileConstants.py  file_constants.py
